infra/kubernetes/production/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motus-play
spec:
  ingressClassName: nginx
  rules:
    - host: play-dev.raphcvr.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motus-rt
spec:
  ingressClassName: nginx
  rules:
    - host: rt-dev.raphcvr.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game
                port:
                  name: http
